Fix mxid colors for dark theme
Signed-off-by: Ajay Bura <ajbura@gmail.com>

--- a/src/index.scss
+++ b/src/index.scss
@@ -74,6 +74,15 @@
   --ic-caution-normal: rgba(255, 179, 0, 80%);
   --ic-danger-normal: rgba(240, 71, 71, 0.7);
 
+  /* user mxid colors */
+  --mx-uc-1: hsl(208, 66%, 53%);
+  --mx-uc-2: hsl(302, 49%, 45%);
+  --mx-uc-3: hsl(163, 97%, 36%);
+  --mx-uc-4: hsl(343, 75%, 61%);
+  --mx-uc-5: hsl(24, 100%, 59%);
+  --mx-uc-6: hsl(181, 63%, 47%);
+  --mx-uc-7: hsl(242, 89%, 65%);
+  --mx-uc-8: hsl(94, 65%, 50%);
 
   /* system icon size | -ic-[size]: value */
   --ic-large: 38px;
@@ -229,6 +238,16 @@
   /* system icons | --ic-[background type]-[priority]: value */
   --ic-surface-normal: rgba(255, 255, 255, 84%);
   --ic-primary-normal: #ffffff;
+
+  /* user mxid colors */
+  --mx-uc-1: hsl(208, 100%, 58%);
+  --mx-uc-2: hsl(301, 100%, 60%);
+  --mx-uc-3: hsl(163, 93%, 41%);
+  --mx-uc-4: hsl(343, 91%, 66%);
+  --mx-uc-5: hsl(24, 100%, 67%);
+  --mx-uc-6: hsl(181, 100%, 50%);
+  --mx-uc-7: hsl(243, 100%, 74%);
+  --mx-uc-8: hsl(94, 66%, 50%);
   
   /* shadow and overlay */
   --bg-overlay: rgba(0, 0, 0, 50%);
